# ieee754_implementation

./: .gitignore  CMakeLists.txt  README.md  README.pl.md  Readme.md  final.cpp  ieee754.cpp  main  main.cpp  prezentacja.md  test.txt  unsolved_addition_test_cases.txt  unsolved_divide_test_cases.txt  unsolved_multiplication_test_cases
lib/: ieee754.cpp  ieee754.h
src/: ieee  ieee.s  ieee754  ieee754.cpp
tests/: mytests.cpp
